@@ -8,6 +8,7 @@ Fixed bug 1121: NullPointerException when invoking XPathCLI
 Fixed bug 1130: CloseResource doesn't recognize custom close method
 Fixed bug 1131: CloseResource should complain if code betwen declaration of resource and try
 Fixed bug 1134: UseStringBufferLength: false positives
+Fixed bug 1135: CheckResultSet ignores results set declared outside of try/catch
 Fixed bug 1136: ECMAScript: NullPointerException in getLeft() and getRight()
 Fixed bug 1141: ECMAScript: getFinallyBlock() is buggy.
 Fixed bug 1142: ECMAScript: getCatchClause() is buggy.
